--- a/zpodsdk/pyproject.toml
+++ b/zpodsdk/pyproject.toml
@@ -18,10 +18,9 @@ attrs = "22.2.0"
 python-dateutil = "2.8.2"
 
 [tool.poetry.group.dev.dependencies]
-black = "23.1.0"
-flake8 = "6.0.0"
+black = "^23.1.0"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
