Change primary key for instance_component.  Add model_base.  Change error handling for instance component.

--- a/.env.default
+++ b/.env.default
@@ -12,6 +12,8 @@ ZPODCORE_POSTGRES_DSN="postgresql://postgres:${ZPODCORE_POSTGRES_PASSWORD}@zpodp
 # Set to your current environment (use absolute paths)
 ZPODCORE_LIBRARY_PATH=/zPodLibrary
 ZPODCORE_PRODUCTS_PATH=/zPod/Products
+ZPODCORE_RESULTS_PATH=/zPod/results
+
 
 # Required path for zPodFactory host
 # This is where all the dnsmasq zPod subdomains configuration live.
