--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -55,11 +55,11 @@ services:
       - zpodpostgres
     entrypoint: [ "prefect", "server", "start" ]
     environment:
-      - PREFECT_API_URL=http://${ZPODENGINE_HOSTPORT:-127.0.0.1:4200}/api
       # Keeping those variables for potential future tuning
       - PREFECT_API_DATABASE_TIMEOUT=30
       - PREFECT_API_DATABASE_CONNECTION_TIMEOUT=15
       - PREFECT_API_DATABASE_CONNECTION_URL=postgresql+asyncpg://postgres:${ZPODCORE_POSTGRES_PASSWORD}@zpodpostgres/prefect
+      - PREFECT_API_URL=http://${ZPODENGINE_HOSTPORT:-127.0.0.1:4200}/api
       - PREFECT_SERVER_API_HOST=0.0.0.0
       - TELEMETRY_ENABLED=false
     ports:
@@ -76,10 +76,10 @@ services:
       - zpodpostgres
     entrypoint: [ "prefect", "agent", "start", "-q", "default" ]
     environment:
-      - PREFECT_API_URL=http://zpodengineserver:4200/api
       # Keeping those variables for potential future tuning.
       - PREFECT_API_DATABASE_TIMEOUT=30
       - PREFECT_API_DATABASE_CONNECTION_TIMEOUT=15
+      - PREFECT_API_URL=http://zpodengineserver:4200/api
     restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -97,9 +97,10 @@ services:
       - zpodpostgres
     entrypoint: [ "/bin/bash" ]
     environment:
-      - PREFECT_API_URL=http://zpodengineserver:4200/api
-      - ZPODCORE_PATH=${PWD}
       - HISTFILE=/commandhistory/.zpodenginecli_bash_history
+      - PREFECT_API_URL=http://zpodengineserver:4200/api
+      - PREFECT_LOCAL_STORAGE_PATH=/results
+      - ZPODCORE_PATH=${PWD}
     env_file:
       - .env
     profiles: [ "cli" ]
@@ -108,9 +109,10 @@ services:
       - ./zpodengine/src/zpodengine:/zpodcore/src/zpodengine:cached
       - ./zpodengine/scripts:/zpodcore/scripts:cached
       - zpod_vol_history:/commandhistory
+      - ${ZPODCORE_DNSMASQ_PATH}:/etc/dnsmasq.d
       - ${ZPODCORE_LIBRARY_PATH}:/library
       - ${ZPODCORE_PRODUCTS_PATH}:/products
-      - ${ZPODCORE_DNSMASQ_PATH}:/etc/dnsmasq.d
+      - ${ZPODCORE_RESULTS_PATH}:/results
 
 volumes:
   zpod_vol_history: null
