Add SITE_ID to settings

--- a/.env.default
+++ b/.env.default
@@ -19,6 +19,9 @@ ZPODCORE_RESULTS_PATH=/zPod/results
 # This is where all the dnsmasq zPod subdomains configuration live.
 ZPODCORE_DNSMASQ_PATH=/zPod/zPodDNS
 
+# This id is added as a prefix to objects created in vCenter and NSX
+ZPODCORE_SITE_ID=zpod
+
 # Customer Connect credentials (this will change soon)
 ZPODCORE_VCC_USERNAME="xyz@company.com"
 ZPODCORE_VCC_PASSWORD="amazingpassword"
