Updated openapi-python-client to 0.14.1

--- a/zpodsdk_builder/pyproject.toml
+++ b/zpodsdk_builder/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "zpodsdk_builder"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-openapi-python-client = "^0.12.3"
+openapi-python-client = "0.14.1"
 
 
 [build-system]
