Use servers-file for dnsmasq

--- a/.env.default
+++ b/.env.default
@@ -19,6 +19,9 @@ ZPODCORE_RESULTS_PATH=/zPod/results
 # This is where all the dnsmasq zPod subdomains configuration live.
 ZPODCORE_DNSMASQ_PATH=/zPod/zPodDNS
 
+# This is where the dnsmasq servers file lives.
+ZPODCORE_DNS_SERVERS_PATH=/zPod/zPodDnsServers
+
 # This id is added as a prefix to objects created in vCenter and NSX
 ZPODCORE_SITE_ID=zpod
 
