--- a/zpodcli/pyproject.toml
+++ b/zpodcli/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.10"
 pydantic = "^1.10.4"
 typer = {extras = ["all"], version = "^0.9.0"}
 zpodsdk = {path = "../zpodsdk", develop = true}
+pyyaml = "^6.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
