--- a/zpodengine/pyproject.toml
+++ b/zpodengine/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "1.0.0"
 sqlmodel = "0.0.8"
 pyvmomi = "^8.0.1.0"
 jinja2 = "^3.1.2"
+pyopenssl = "^23.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
