--- a/zpodengine/pyproject.toml
+++ b/zpodengine/pyproject.toml
@@ -8,14 +8,15 @@ readme = "README.md"
 [tool.poetry.dependencies]
 email-validator = "1.3.1"
 ipython = "^8.11.0"
-prefect = "2.11.5"
+jinja2 = "^3.1.2"
+prefect = "2.12.1"
+prefect-docker = {git = "https://github.com/kvalenti/prefect-docker.git"}
 psycopg2 = "2.9.6"
+pyopenssl = "^23.2.0"
 python = "3.11.2"
 python-dotenv = "1.0.0"
-sqlmodel = "0.0.8"
 pyvmomi = "^8.0.1.0"
-jinja2 = "^3.1.2"
-pyopenssl = "^23.2.0"
+sqlmodel = "0.0.8"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
