--- a/zpodapi/pyproject.toml
+++ b/zpodapi/pyproject.toml
@@ -6,23 +6,23 @@ authors = ["Kelby Valenti <kvalenti@vmware.com>", "Timo Sugliani <tsugliani@vmwa
 readme = "README.md"
 
 [tool.poetry.dependencies]
-alembic = "1.10.4"
-email-validator = "1.3.1"
-fastapi = "0.95.1"
-gitpython = "3.1.31"
-gunicorn = "20.1.0"
-httpx = "0.24.0"
+alembic = "1.12.0"
+email-validator = "2.1.0.post1"
+fastapi = "0.104.0"
+gitpython = "3.1.40"
+gunicorn = "21.2.0"
+httpx = "0.25.0"
 ipython = "^8.11.0"
 passlib = "1.7.4"
-psycopg2 = "2.9.6"
+psycopg2 = "2.9.9"
 python = "3.11.2"
 python-dotenv = "1.0.0"
 python-jose = {extras = ["cryptography"], version = "3.3.0"}
 python-multipart = "0.0.6"
-rich = "13.3.5"
-sqlmodel = "0.0.8"
-tenacity = "8.2.2"
-uvicorn = "0.22.0"
+rich = "13.6.0"
+sqlmodel = "0.0.9"
+tenacity = "8.2.3"
+uvicorn = "0.23.2"
 pyvmomi = "^8.0.1.0"
 
 [tool.poetry.group.dev.dependencies]
