--- a/zpodengine/pyproject.toml
+++ b/zpodengine/pyproject.toml
@@ -6,17 +6,17 @@ authors = ["Kelby Valenti <kvalenti@vmware.com>", "Timo Sugliani <tsugliani@vmwa
 readme = "README.md"
 
 [tool.poetry.dependencies]
-email-validator = "1.3.1"
+email-validator = "2.1.0.post1"
 ipython = "^8.11.0"
 jinja2 = "^3.1.2"
-prefect = "2.13.6"
+prefect = "2.14.1"
 prefect-docker = {git = "https://github.com/kvalenti/prefect-docker.git"}
-psycopg2 = "2.9.6"
+psycopg2 = "2.9.9"
 pyopenssl = "^23.2.0"
 python = "3.11.2"
 python-dotenv = "1.0.0"
 pyvmomi = "^8.0.1.0"
-sqlmodel = "0.0.8"
+sqlmodel = "0.0.9"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
