--- a/zpodapi/pyproject.toml
+++ b/zpodapi/pyproject.toml
@@ -26,16 +26,12 @@ uvicorn = "0.23.2"
 pyvmomi = "^8.0.1.0"
 
 [tool.poetry.group.dev.dependencies]
-autoflake = "^2.0.2"
-black = "^23.1.0"
 coverage = "^7.1.0"
 debugpy = "^1.6.6"
-flake8 = "^6.0.0"
-flake8-bugbear = "^23.1.20"
-isort = "^5.12.0"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
 pytest-xdist = "^3.2.0"
+ruff = "^0.1.1"
 
 [build-system]
 requires = ["poetry-core"]
