--- a/zpodapi/scripts/alembic/alembic.ini
+++ b/zpodapi/scripts/alembic/alembic.ini
@@ -60,19 +60,17 @@ sqlalchemy.url = driver://user:pass@localhost/dbname
 # detail and examples
 
 # format using "black" - use the console_scripts runner, against the "black" entrypoint
-hooks = autoflake,black,isort
+hooks = ruff,ruffformat
 
-black.type = console_scripts
-black.entrypoint = black
-black.options = -l 88 REVISION_SCRIPT_FILENAME
+ruff.type = exec
+ruff.executable = ruff
+ruff.options = --fix --extend-select "I" REVISION_SCRIPT_FILENAME
 
-isort.type = console_scripts
-isort.entrypoint = isort
-isort.options = REVISION_SCRIPT_FILENAME
+ruffformat.type = exec
+ruffformat.executable = ruff
+ruffformat.options = format REVISION_SCRIPT_FILENAME
 
-autoflake.type = console_scripts
-autoflake.entrypoint = autoflake
-autoflake.options = --in-place --remove-all-unused-imports REVISION_SCRIPT_FILENAME
+
 
 # Logging configuration
 [loggers]
