--- a/zpodsdk/pyproject.toml
+++ b/zpodsdk/pyproject.toml
@@ -18,8 +18,7 @@ attrs = "23.1.0"
 python-dateutil = "2.8.2"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.1.0"
-flake8 = "^6.0.0"
+ruff = "^0.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
