--- a/zpodcli/pyproject.toml
+++ b/zpodcli/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "zpodcli"
-version = "0.1.0"
+version = "0.2.3"
 description = ""
 authors = ["Timo Sugliani <timo.sugliani@gmail.com>"]
 license = "MIT"
@@ -15,6 +15,7 @@ python = "^3.10"
 pydantic = "^1.10.4"
 typer = {extras = ["all"], version = "^0.9.0"}
 zpodsdk = {path = "../zpodsdk", develop = true}
+#zpodsdk = "0.2.3"
 pyyaml = "^6.0"
 
 [tool.poetry.group.dev.dependencies]
