--- a/zpodengine/pyproject.toml
+++ b/zpodengine/pyproject.toml
@@ -13,7 +13,7 @@ prefect = "2.14.1"
 prefect-docker = {git = "https://github.com/kvalenti/prefect-docker.git"}
 psycopg2 = "2.9.9"
 pyopenssl = "^23.2.0"
-python = "3.11.2"
+python = "^3.11"
 python-dotenv = "1.0.0"
 pyvmomi = "^8.0.1.0"
 sqlmodel = "0.0.9"
