--- a/zpodcli/pyproject.toml
+++ b/zpodcli/pyproject.toml
@@ -12,7 +12,7 @@ zcli = "zpodcli.main:launch"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pydantic = "^1.10.4"
+pydantic = "2.6.1"
 typer = {extras = ["all"], version = "^0.9.0"}
 zpodsdk = {path = "../zpodsdk", develop = true}
 #zpodsdk = "0.2.3"
