--- a/zpodengine/dockerfile
+++ b/zpodengine/dockerfile
@@ -5,6 +5,7 @@ ARG PS_VERSION=7.4.1
 ARG PS_INSTALL_VERSION=7-4-1
 ARG POWERCLI_VERSION=13.2.1.22851661
 ARG POWERNSX_VERSION=3.0.1192
+ARG POWERVCF_VERSION=2.4.1.1000
 ARG GOVC_VERSION=0.34.2
 ARG VCC_VERSION=1.2.0-beta
 
@@ -90,6 +91,7 @@ FROM base as main
 ARG PS_INSTALL_VERSION
 ARG POWERCLI_VERSION
 ARG POWERNSX_VERSION
+ARG POWERVCF_VERSION
 ARG POETRY_VENV
 
 # Copy python packages
@@ -164,7 +166,8 @@ SHELL [ "pwsh", "-command" ]
 RUN Set-PSRepository -Name PSGallery -InstallationPolicy Trusted
 RUN Install-Module -Scope AllUsers VMware.PowerCLI -RequiredVersion ${POWERCLI_VERSION}
 RUN Install-Module -Scope AllUsers PowerNSX -RequiredVersion ${POWERNSX_VERSION}
-RUN Install-Module -Scope AllUsers Subnet -RequiredVersion 1.0.6
+RUN Install-Module -Scope AllUsers PowerVCF -RequiredVersion ${POWERVCF_VERSION}
+RUN Install-Module -Scope AllUsers Subnet -RequiredVersion 1.0.14
 
 # On by default to suppress nagging. Set to $false if you don't want to help us make PowerCLI better.
 RUN Set-PowerCLIConfiguration -ParticipateInCeip $true -Confirm:$false
