--- a/zpodapi/pyproject.toml
+++ b/zpodapi/pyproject.toml
@@ -7,32 +7,32 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 alembic = "1.13.1"
-email-validator = "2.1.0.post1"
-fastapi = "0.109.0"
-gitpython = "3.1.41"
+email-validator = "2.1.1"
+fastapi = "0.110.0"
+gitpython = "3.1.42"
 gunicorn = "21.2.0"
-httpx = "0.26.0"
+httpx = "0.27.0"
 ipython = "^8.20.0"
 passlib = "1.7.4"
 psycopg2 = "2.9.9"
-pydantic-settings = "2.1.0"
+pydantic-settings = "2.2.1"
 python = "3.12.1"
 python-dotenv = "1.0.1"
 python-jose = {extras = ["cryptography"], version = "3.3.0"}
-python-multipart = "0.0.6"
+python-multipart = "0.0.9"
 pyvmomi = "8.0.2.0.1"
-rich = "13.7.0"
-sqlmodel = "0.0.14"
+rich = "13.7.1"
+sqlmodel = "0.0.16"
 tenacity = "8.2.3"
-uvicorn = "0.27.0.post1"
+uvicorn = "0.27.1"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.1.0"
 debugpy = "^1.6.6"
-pytest = "^7.2.1"
-pytest-cov = "^4.0.0"
-pytest-xdist = "^3.2.0"
-ruff = "^0.1.1"
+pytest = "^8"
+pytest-cov = "^4.0"
+pytest-xdist = "^3.2"
+ruff = "^0.3"
 
 [build-system]
 requires = ["poetry-core"]
