--- a/zpodsdk/pyproject.toml
+++ b/zpodsdk/pyproject.toml
@@ -13,12 +13,12 @@ include = ["CHANGELOG.md", "zpod/py.typed"]
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
-httpx = "0.26.0"
+httpx = "0.27.0"
 attrs = "23.2.0"
-python-dateutil = "2.8.2"
+python-dateutil = "2.9.0.post0"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.1.1"
+ruff = "^0.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
