Setting defaults to more common values for initial setup
Signed-off-by: Timo Sugliani <timo.sugliani@gmail.com>

--- a/.env.default
+++ b/.env.default
@@ -1,12 +1,13 @@
 # Some default values
 
 COMPOSE_FILE=docker-compose.dev.yml
-COMPOSE_PROJECT_NAME=${USER}
+COMPOSE_PROJECT_NAME=project
 
 # If ZPODAPI_DEV_MODE set to false, normal log output.
 ZPODAPI_DEV_MODE=true
+ZPODAPI_DEV_AUTOAUTH_USER=1
 
-ZPODCORE_POSTGRES_PASSWORD=amazingpasswordin2022
+ZPODCORE_POSTGRES_PASSWORD=amazingpasswordin2024
 ZPODCORE_POSTGRES_DSN="postgresql://postgres:${ZPODCORE_POSTGRES_PASSWORD}@zpodpostgres/zpod"
 
 # Set to your current environment (use absolute paths)
@@ -21,11 +22,8 @@ ZPODCORE_DNSMASQ_SERVERS_PATH=/zPod/zPodDnsmasqServers
 # This id is added as a prefix to objects created in vCenter and NSX
 ZPODCORE_SITE_ID=zpod
 
-# Changing default listening ip/ports (optional)
-# This makes only sense if you run multiple instances
-# of this project on the same device.
-
-# ZPODAPI_HOSTPORT=X.X.X.X:8300
-# ZPODAPI_DEBUG_HOSTPORT=X.X.X.X:8399
-# ZPODAPI_POSTGRES_HOSTPORT=X.X.X.X:8350
-# ZPODENGINE_HOSTPORT=X.X.X.X:8360
+# Setting zPodFactory listening ipaddress:ports 
+ZPODAPI_HOSTPORT=X.X.X.X:8000
+ZPODAPI_DEBUG_HOSTPORT=X.X.X.X:8099
+ZPODAPI_POSTGRES_HOSTPORT=X.X.X.X:8050
+ZPODENGINE_HOSTPORT=X.X.X.X:8060
