Disable ruff cache inside alembic and sdk generator

--- a/zpodapi/scripts/alembic/alembic.ini
+++ b/zpodapi/scripts/alembic/alembic.ini
@@ -64,11 +64,11 @@ hooks = ruff,ruffformat
 
 ruff.type = exec
 ruff.executable = ruff
-ruff.options = --fix --extend-select "I" REVISION_SCRIPT_FILENAME
+ruff.options = check --no-cache --fix --extend-select "I" REVISION_SCRIPT_FILENAME
 
 ruffformat.type = exec
 ruffformat.executable = ruff
-ruffformat.options = format REVISION_SCRIPT_FILENAME
+ruffformat.options = format --no-cache REVISION_SCRIPT_FILENAME
 
 
 
