Remove Prefect warning on tasks runnnig more than 10s
Signed-off-by: Timo Sugliani <timo.sugliani@gmail.com>

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -80,6 +80,8 @@ services:
     entrypoint: /zpodcore/bootstrap/start_worker.sh
     environment:
       - PREFECT_API_URL=http://zpodengineserver:4200/api
+      - PREFECT_TASK_INTROSPECTION_WARN_THRESHOLD=0
+
     restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
