--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,90 @@
-version: '3.7'
 services:
-  traefik:
-    init: true
-    image: traefik:v2.5
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - "$PWD/traefik:/etc/traefik"
-    labels:
-      traefik.enable: true
-      traefik.http.routers.traefik.rule: Host(`${ZPODAPI_TRAEFIK_HOST}`)
-      traefik.http.routers.traefik.service: api@internal
-      traefik.http.routers.traefik.entrypoints: websecure
-      traefik.http.routers.traefik.tls: true
-      traefik.http.routers.traefik.tls.certresolver: default
-      traefik.http.routers.traefik.middlewares: traefik-auth
-      traefik.http.middlewares.traefik-auth.basicauth.users: ${ZPODAPI_TRAEFIK_BASICAUTH}
-
   zpodapi:
+    container_name: ${COMPOSE_PROJECT_NAME}-zpodapi
     build:
       context: .
       dockerfile: ./zpodapi/dockerfile
-      target: production
-    container_name: zpodapi
+      target: dev
     depends_on:
       - zpodpostgres
     env_file:
       - .env
+    environment:
+      - COLUMNS
+      - HISTFILE=/commandhistory/.zpodapi_bash_history
+      - PYDEVD_DISABLE_FILE_VALIDATION=1
     init: true
-    restart: always
     ports:
-      - ${ZPODAPI_HOSTPORT:-0.0.0.0:8000}:8000
-    labels:
-      traefik.enable: true
-      traefik.http.routers.zpod-api.rule: Host(`${ZPODAPI_TRAEFIK_HOST_API}`)
-      traefik.http.routers.zpod-api.entrypoints: websecure
-      traefik.http.routers.zpod-api.tls.certresolver: default
-      traefik.http.routers.zpod-api.tls: true
+      - ${ZPODAPI_HOSTPORT:-127.0.0.1:8000}:8000
+      - ${ZPODAPI_DEBUG_HOSTPORT:-127.0.0.1:5678}:5678
+    restart: always
+    tty: true
+    # user: "${UID}:${GID}"
     volumes:
-      - ./logs:/zpodcore/logs
+      - ./zpodapi/scripts:/zpodcore/scripts:cached
+      - ./zpodapi/tests:/zpodcore/tests:cached
+      - ./zpodapi/src/zpodapi:/zpodcore/src/zpodapi:cached
+      - ./zpodcommon/src/zpodcommon:/zpodcore/src/zpodcommon:cached
+      - ${ZPODCORE_LIBRARY_PATH}:/library
+      - ${ZPODCORE_PRODUCTS_PATH}:/products
+      - ./logs:/zpodcore/logs:cached
+      - zpod_vol_history:/commandhistory
 
   zpodpostgres:
-    container_name: zpodpostgres
+    container_name: ${COMPOSE_PROJECT_NAME}-zpodpostgres
     environment:
       - POSTGRES_PASSWORD=${ZPODCORE_POSTGRES_PASSWORD}
-    image: postgres:13.4
+    build:
+      context: .
+      dockerfile: ./zpodpostgres/dockerfile
+    command: [ "postgres", "--log_checkpoints=0" ]
     ports:
       - ${ZPODAPI_POSTGRES_HOSTPORT:-127.0.0.1:5432}:5432
     restart: always
     volumes:
-      - zpod-postgres-vol:/var/lib/postgresql/data
+      - zpod_vol_postgres:/var/lib/postgresql/data
+
+  # Prefect Server API
+  zpodengineserver:
+    container_name: ${COMPOSE_PROJECT_NAME}-zpodengineserver
+    image: prefecthq/prefect:2.18.1-python3.12
+    depends_on:
+      - zpodpostgres
+    entrypoint: [ "prefect", "server", "start" ]
+    environment:
+      # Keeping those variables for potential future tuning
+      - PREFECT_API_DATABASE_TIMEOUT=30
+      - PREFECT_API_DATABASE_CONNECTION_TIMEOUT=15
+      - PREFECT_API_DATABASE_CONNECTION_URL=postgresql+asyncpg://postgres:${ZPODCORE_POSTGRES_PASSWORD}@zpodpostgres/prefect
+      - PREFECT_API_URL=http://${ZPODENGINE_HOSTPORT:-127.0.0.1:4200}/api
+      - PREFECT_SERVER_API_HOST=0.0.0.0
+      - TELEMETRY_ENABLED=false
+    ports:
+      - ${ZPODENGINE_HOSTPORT:-127.0.0.1:4200}:4200
+    restart: always
+    volumes:
+      - zpod_vol_prefect:/root/.prefect
+
+  # Prefect Worker
+  zpodengineworker:
+    container_name: ${COMPOSE_PROJECT_NAME}-zpodengineworker
+    build:
+      context: .
+      dockerfile: ./zpodengine/dockerfile-worker
+    depends_on:
+      - zpodpostgres
+      - zpodengineserver
+    entrypoint: /zpodcore/bootstrap/start_worker.sh
+    environment:
+      - PREFECT_API_URL=http://zpodengineserver:4200/api
+      - PREFECT_TASK_INTROSPECTION_WARN_THRESHOLD=0
+
+    restart: always
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./zpodengine/bootstrap:/zpodcore/bootstrap:cached
 
 volumes:
-  zpod-postgres-vol: null
+  zpod_vol_history: null
+  zpod_vol_postgres: null
+  zpod_vol_prefect: null
