Set new defaults
Signed-off-by: Timo Sugliani <timo.sugliani@gmail.com>

--- a/.env.default
+++ b/.env.default
@@ -1,6 +1,6 @@
 # Some default values
 
-COMPOSE_FILE=docker-compose.dev.yml
+COMPOSE_FILE=docker-compose.yml
 COMPOSE_PROJECT_NAME=project
 
 ZPODCORE_POSTGRES_PASSWORD=amazingpasswordin2024
