--- a/zpodcli/pyproject.toml
+++ b/zpodcli/pyproject.toml
@@ -12,14 +12,14 @@ zcli = "zpodcli.main_cli:launch"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pydantic = "2.6.3"
-typer = {extras = ["all"], version = "0.10.0"}
+pydantic = "2.7.1"
+typer = "0.12.3"
 zpodsdk = {path = "../zpodsdk", develop = true}
 #zpodsdk = "0.6.1"
 pyyaml = "^6.0"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.3"
+ruff = "^0.4"
 ipython = "^8.9.0"
 
 
