--- a/zpodengine/dockerfile-worker
+++ b/zpodengine/dockerfile-worker
@@ -1,4 +1,4 @@
-FROM prefecthq/prefect:2.18.1-python3.12
+FROM prefecthq/prefect:2.19.2-python3.12
 
 RUN apt-get update \
     && apt-get install -y \
@@ -7,3 +7,5 @@ RUN apt-get update \
 
 RUN pip install prefect-docker
 
+# Remove this line once this is resolved everywhere: https://github.com/docker/docker-py/issues/3256
+RUN pip install "requests==2.31.0"
