--- a/zpodengine/pyproject.toml
+++ b/zpodengine/pyproject.toml
@@ -16,9 +16,9 @@ pydantic-settings = "^2.1.0"
 pyopenssl = "^24.0.0"
 python = "3.12.1"
 python-dotenv = "1.0.1"
-pyvmomi = "^8.0.1.0"
+pyvmomi = "<8.0.3"
 sqlmodel = "0.0.18"
-requests = "<2.33.0" # Remove this line once this is resolved everywhere: https://github.com/docker/docker-py/issues/3256
+requests = "<2.32.0" # Remove this line once this is resolved everywhere: https://github.com/docker/docker-py/issues/3256
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8"
